tests/compile-errors/type-check-template.valk

use valk:fs

fn main() {
    let a : TYPE1 = null.@cast(TYPE1)
    let b : TYPE2 = null.@cast(TYPE2)
    a = b
}
